# plantit

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  Makefile  OPERATIONS.md  README.md  agents.md  eslint.config.mjs  package.json  plan.md  pyproject.toml  pytest.ini  requirements.txt  run.py  serve.py
agents/: API_Integrator.md  Accessibility_Reviewer.md  Agents.md  Backend_Engineer.md  CycleCheckAgent.md  Data_Modeler.md  DevOps_Packager.md  Docs_Writer.md  FrontendBootAgent.md  Frontend_Engineer.md  Global_Guardrails.md  InfraAgent.md  MimeSmokeAgent.md  PerfGuardAgent.md  QA_Tester.md  README.md  RouterAgent.md  SWBouncerAgent.md  Security_Review.md  UX_Designer.md  VM_Contract_Gatekeeper.md  agent-phase-00.md  agent-phase-01.md  agent-phase-02.md  agent-phase-03.md  agent-phase-04.md  agent-phase-05.md  agent-phase-06.md  agent-phase-07.md  agent-phase-08.md  agent-phase-09.md  agent-phase-10.md  agent-phase-11.md  agent-phase-12.md  agent-phase-13.md  agent-phase-14.md  agent-phase-15.md  agents.md
backend/: __init__.py  app.py  config.py  database.py  db.py  openapi.yaml
docs/: mvvm-contracts.md  performance-budgets.md
frontend/: README.types.md  app.js  index.html  manifest.webmanifest  package-lock.json  package.json  service-worker.js  store.js  styles.css
plan/: Phase-00_Bootstrap_Dev_Ergonomics.md  Phase-01_Data_Model_and_CRUD.md  Phase-02_Media_Uploads_Thumbs_EXIF.md  Phase-03_Search_FTS5_and_Tags.md  Phase-04_Dashboard_Aggregates.md  Phase-05_Frontend_Shell_MVVM.md  Phase-06_Home_View.md  Phase-07_Village_Detail.md  README.md  (+31 more)
(+343 files in other folders)
