[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plantit"
version = "0.1.0"
description = "Plantit backend and frontend application"
authors = [{name = "Plantit Team"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.29",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "pillow>=10.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.4.5",
    "black>=24.4.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["backend/tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",
    "F",
    "I"
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
